# erol

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.sh  start.py
config/: config.example.yaml
docs/: Feature_Store_Sema_TR.md  MVP_Proje_Dokumani_TR.md  Quick_Wins_Week1_Plan_TR.md  Tasarim_Rejim_Metalearner_TripleBarrier.md
erol/: pyproject.toml
erol/src/erol/: __main__.py
erol/src/erol/core/: bus.py  events.py  models.py
erol/src/erol/features/: indicators.py
erol/src/erol/ingestion/: binance.py
erol/src/erol/store/: feature_store.py
erol/src/erol/utils/: config.py  logging.py  serde.py
scripts/: compute_indicators.py
src/: __init__.py  main.py
src/data_collection/: __init__.py  data_collector.py
src/feature_store/: store.py
src/features/: indicators.py
src/ml_models/: __init__.py  model_manager.py
src/trading_engine/: __init__.py  trading_bot.py
src/utils/: config.py  logger.py
