[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erol"
version = "0.1.0"
description = "Erol AI trading bot MVP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Erol" }]
dependencies = [
  "websockets>=12.0",
  "httpx[http2]>=0.27",
  "polars>=1.6.0",
  "pyarrow>=16.1.0",
  "numpy>=1.26",
  "pydantic>=2.8",
  "redis>=5.0",
  "orjson>=3.10",
  "uvloop>=0.19",
  "typer>=0.12",
  "rich>=13.7"
]

[project.scripts]
erol = "erol.__main__:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

